bk_ida/gccida/g1/expand_nl_handler_label
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_nl_handler_label/src/stmt.c:4002:36: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v2); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_nl_handler_label/src/obj/stmt.o] Error 1
